# suntobot

./: .env.example  .env.template  .gitignore  Dockerfile  MIGRATIONS.md  README.md  SETUP.md  alembic.ini  command_handler.py  config.py  database.py  docker-compose.example.yml  health_check.py  image_analyzer.py  main.py  message_handler.py  pyproject.toml  run_migration.py  setup.py  summary_engine.py  test_bot.py  test_html_sanitizer.py  test_image_analysis.py  test_mention_setup.py  test_simple.py  test_telegram_error.py  time_utils.py
.forgejo/workflows/: build-push-image.yml  code-check.yml
alembic/: env.py
alembic/versions/: 0527919c56ac_initial_migration.py  d05d8abd2154_add_summary_cache.py  e8ce85b159dc_remove_unique_constraint_in_messages_.py
demo/: docker-compose.yml
prompts/: chunk_system_prompt.txt  chunk_system_prompt_suffix.txt  mention_system_prompt.txt  meta_summary_system_prompt.txt  meta_summary_system_prompt_suffix.txt  system_prompt.txt  system_prompt_chunk_preamble.txt  system_prompt_suffix.txt
src/: command_handler.py  config.py  database.py  image_analyzer.py  llm_client.py  main.py  message_handler.py  summary_engine.py  time_utils.py
