[project]
name = "suntobot"
version = "0.1.0"
description = "Telegram bot that automatically saves chat messages and provides personalized summaries using an LLM"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai>=1.93.0",
    "python-telegram-bot>=22.2",
    "sqlalchemy>=2.0.41",
    "psycopg2-binary>=2.9.9",
    "python-dateutil>=2.8.2",
    "pillow>=10.0.0",
    "dotenv>=0.9.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.2",
]
